# particle-life

./: .gitignore  .htaccess  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEPLOYMENT-GUIDE.md  Dual Hypothesis Implementation.md  ESP32_API.md  ESP32_UART_Protocol.h  FULLSCREEN_UBUNTU.md  LIGHTNING_PROTOCOL.md  PERFORMANCE_ANALYSIS.md  PRESSURE_PARTICLE_DENSITY_IMPLEMENTATION.md  README.md  app.ts  bluetooth-autofix-sudo.sh  bluetooth-autofix.sh  build-wasm.sh  build.rs  check-wasm.sh  clean-architecture-demo.html  decode_esp32.py  deploy.sh  esp32_minimal.ino  esp32_particle_controller.ino  esp32_simulator.py  esp32_volume_controller.ino  package-wasm.json  package.json  quick-launch.sh  rebuild.sh  run-native.sh  run_esp32_simulator.sh  standalone_logging_test.rs  test_logging  test_logging.rs  tsconfig.json  webpack.config.js
docs/: feature-detection.md
public/: audio-processor.js
shared/: codegen.js  life_params.json
src/: audio.rs  audio_engine.rs  audio_engine_wasm.rs  audio_worklet_exports.rs  buffer_utils.rs  color-utils.ts  complete_renderer.rs  config.rs  config.ts  dsp.rs  embed.ts  esp32_communication.rs  gol-patterns.ts  hsluv-colors.ts  hypothesis-sliders.ts  index.html  interaction_rules.rs  joy.js  lenia-integration-concept.md  lib.rs  lightning_system.rs  main-backup.ts  main-new.ts  main.ts  meta.ts  native.rs  native_new.rs  particle-lenia.ts  particle-life-types.ts  particle_system.rs  particle_transitions.rs  rust-ui-integration.ts  shader_constants.rs  shaders.rs  simulation_params.rs  sonification.rs  spatial_grid.rs  stats_reader.rs  surface_creation_web.txt  test_lib.rs  (+2 more)
src/lib/: joy.d.ts
src/rendering/: mod.rs
src/shaders/: background_frag.wgsl  background_vert.wgsl  blur_h.wgsl  compute.wgsl  compute_lightning_fixed.wgsl  corner_overlay.wgsl  fisheye_frag.wgsl  frag.wgsl  frag_flat.wgsl  glow_frag.wgsl  grid_frag.wgsl  lightning_compute.wgsl  lightning_frag.wgsl  lightning_frag_buffer.wgsl  lightning_frag_simple.wgsl  lightning_vert.wgsl  night_frag.wgsl  particle_vertex.wgsl  simple_frag.wgsl  simple_vert.wgsl  spatial_grid_build.wgsl  stats_compute.wgsl  text_frag.wgsl  text_overlay.wgsl  text_vert.wgsl  vert.wgsl  vignette.wgsl  vignette_frag.wgsl  wgsl.d.ts  zoom_frag.wgsl
src/styles/: main.scss
